# gobble

./: .coverage  .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  Containerfile  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  generate-configs.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: container.yml  deploy.yml  docker-publish.yml  lint.yml  test.yml
config/: default.json  template.json  template_caltrain.json  template_ctdot.json  template_denver_rtd.json  template_kingcountymetro.json  template_marta_bus.json  template_metra.json  template_septa_regionalrail.json  template_stm_montreal.json  template_trimet.json  template_wmata_bus.json
config/template/: template_caltrain.json  template_cats.json  template_ctdot.json  template_denver_rtd.json  template_kingcountymetro.json  template_lirr.json  template_marta_bus.json  template_mbta.json  template_metra.json  template_metro_north.json  template_metro_transit.json  template_meva.json  template_nyc_g.json  template_nyc_irt.json  template_pvta.json  template_ripta.json  template_septa_bus.json  template_septa_regionalrail.json  template_soundtransit.json  template_stm_montreal.json  template_ttc.json  template_wegostar.json  template_wmata_bus.json  template_wmata_rail.json
devops/: cloudformation.json  deploy.sh  playbook.yml  systemd.conf
docs/: architecture.md  configuration.md  contributing.md  data-output.md  deployment.md  feeds.md  index.md  testing.md
docs/api/: config.md  constants.md  disk.md  event.md  gobble.md  gtfs.md  logger.md  s3_upload.md  timing.md  trip_state.md  util.md
scripts/: generate_agency_routes.py  generate_configs.py
src/: Carriage.py  Entity.py  VehiclePositionFeed.py  backfill.py  config.py  constants.py  constants.ts  consume_pb.py  disk.py  event.py  fetch_entities.py  gobble.py  gobble.ts  gtfs.py  gtfs.ts  gtfs_rt.py  gtfs_rt_client.py  io.ts  logger.py  main.py  memray-flamegraph-gobble.py.17810.html  memray-flamegraph-gobble.py.21048.html  output.ts  protobuf.py  s3.ts  s3_upload.py  scheduler.py  stop_guessing.py  timing.py  trip_state.py  types.ts  util.py  util.ts
src/agencies/: __init__.py  brta_routes.py  caltrain_routes.py  cats_routes.py  ccrta_routes.py  ctdot_routes.py  denver_rtd_routes.py  frta_routes.py  gatra_routes.py  gcrta_routes.py  gptd_routes.py  kingcountymetro_routes.py  lirr_routes.py  lrta_routes.py  mart_routes.py  marta_routes.py  mbta_routes.py  metra_routes.py  metro_transit_routes.py  meva_routes.py  mwrta_routes.py  nyc_subway_routes.py  pvta_routes.py  ripta_routes.py  septa_bus_routes.py  septa_rr_routes.py  soundtransit_routes.py  stm_montreal_routes.py  ttc_routes.py  vta_routes.py  wegostar_routes.py  wmata_bus_routes.py  wmata_rail_routes.py  wrta_routes.py
src/gtfs_realtime/: Entity.py  VehiclePositionFeed.py  gtfs_types.py  main.py
src/gtfs_realtime/utils/: consume_pb.py  fetch_entities.py
src/tests/: conftest.py  test_disk.py  test_event.py  test_gobble.py  test_gtfs.py  test_gtfs_rt_client.py  test_s3_upload.py  test_timing.py  test_trip_state.py  test_util.py
src/tests/fixtures/: __init__.py  gtfs_fixtures.py  gtfs_rt_fixtures.py  sse_fixtures.py
src/tests/sample_data/: stops_times_mini.txt  trips_mini.txt
