[tool.poetry]
name = "gobble"
version = "1.0.0"
description = "Process MBTA events into a format that can be consumed by the Data Dashboard"
authors = ["TransitMatters Labs <labs@transitmatters.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
pandas = "2.2.3"
sseclient-py = "1.8.0"
requests = "2.32.5"
boto3 = "^1.38.30"
ddtrace = "^3.13.0"
python-json-logger = "^2.0.7"
coverage = "^7.6.10"
debugpy = "^1.8.14"
gtfs-realtime-bindings = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pip = ">=24.1"
flake8 = "^7.3.0"
black = "^25.1.0"
pytest = "~8.4.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--durations=10",
]
markers = [
    "integration: marks tests as integration tests that may download data or perform I/O (deselect with '-m \"not integration\"')",
]
# Auto-discover fixtures from conftest and fixture files
pythonpath = ["src/tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/**/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
