[project]
name = "gobble"
version = "1.0.0"
description = "Process MBTA events into a format that can be consumed by the Data Dashboard"
authors = ["TransitMatters Labs <labs@transitmatters.org>"]
requires-python = ">=3.12,<3.13"
license = "MIT"
readme = "README.md"
package-mode = false
dependencies = [
    "pandas==2.2.3",
    "sseclient-py==1.9.0",
    "requests==2.32.5",
    "boto3~=1.42.24",
    "ddtrace~=4.1.3",
    "python-json-logger~=2.0.7",
]

[dependency-groups]
dev = [
    "chalice==1.32.0",
    "ruff>=0.14.8",
    "pytest~=9.0.2",
    "pre-commit>=4.4.0",
    "coverage~=7.13.1",
    "debugpy~=1.8.19",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
